# fiap-data-eng-programming

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  readme_atividade.md  readme_separacao_tarefas.md  requirements.txt
config/: settings.yaml
src/: New Notebook 2026-03-04 20_49_16.ipynb  config.py  extractor.py  loader.py  log_settings.py  main.py  pipeline.py  spark_session.py  transformer.py
src/config/: settings.py
src/data/output/pedidos_legit_recusados/: .part-00000-b52b0cb3-a3d2-451b-acf8-f9d0e47e1a4e-c000.snappy.parquet.crc  .part-00000-e01ddf35-88bc-422f-93bc-24cd812bda94-c000.snappy.parquet.crc  part-00000-b52b0cb3-a3d2-451b-acf8-f9d0e47e1a4e-c000.snappy.parquet  part-00000-e01ddf35-88bc-422f-93bc-24cd812bda94-c000.snappy.parquet
src/io_utils/: data_handler.py
src/pipeline/: pipeline.py
src/processing/: transformations.py
src/session/: spark_session.py
tests/: test_transformations.py
