[project]
name = "fiap-data-eng-programming"
version = "4.1.0"
description = "Trabalho - SPARK"
authors = [
    {name = "Luiz Adelar Soldatelli Neto, Fátima Beatriz Pinheiro Rodrigues, Jean Felipe dos Santos Ertzogue, Ricardo de Lima Peixoto & Mauricio Acedo de Aquino"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyarrow (>=21.0.0,<22.0.0)",
    "pyspark (==4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "debugpy (==1.8.16)",
    "pyyaml (==6.0.3)",    
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.9",
    "black==25.1.0",
    "build==1.3.0"
]

[project.scripts]
run-data-pipeline = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
